add ArchiDroid's Optimization

--- a/arch/arm/configs/titan_defconfig
+++ b/arch/arm/configs/titan_defconfig
@@ -3639,3 +3639,108 @@ CONFIG_NLATTR=y
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
 # CONFIG_MOT_PATCH_KERNEL is not set
+
+#
+# ArchiKernel settings
+#
+
+#
+# Target options
+#
+CONFIG_ARCHIKERNEL_TARGET_RELEASE_PRODUCTION=y
+# CONFIG_ARCHIKERNEL_TARGET_RELEASE_DEBUG is not set
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_AOSP is not set
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_SAMSUNG is not set
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_ARCH_ARMV7VE is not set
+CONFIG_ARCHIKERNEL_TARGET_ARCH_ARMV7A=y
+# CONFIG_ARCHIKERNEL_TARGET_ARCH_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA15 is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA9 is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_CORTEXA7=y
+# CONFIG_ARCHIKERNEL_TARGET_CPU_UNKNOWN is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_SOFT is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_SOFTFP=y
+# CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_HARD is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_ABI_UNKNOWN is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_NEONVFP4=y
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_VFP4 is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_NEON is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_VFPV3 is not set
+# CONFIG_ARCHIKERNEL_TARGET_CPU_FPU_UNKNOWN is not set
+CONFIG_ARCHIKERNEL_TARGET_CPU_CORES=4
+
+#
+# Core options
+#
+# CONFIG_ARCHIKERNEL_SOUND_ENGINE_BOEFFLA is not set
+# CONFIG_ARCHIKERNEL_SOUND_ENGINE_NONE is not set
+# CONFIG_ARCHIKERNEL_OPTI_OFAST is not set
+# CONFIG_ARCHIKERNEL_OPTI_O3 is not set
+# CONFIG_ARCHIKERNEL_OPTI_O2 is not set
+# CONFIG_ARCHIKERNEL_OPTI_OS is not set
+# CONFIG_ARCHIKERNEL_MALI_API_VERSION=29
+
+#
+# Hacks / Workarounds
+#
+# CONFIG_ARCHIKERNEL_TARGET_DEVICE_HAS_JB_BOOTLOADER=y
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_USES_OLDER_LIGHTS is not set
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_NO_SLICE_ENCODING=y
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_BLUETOOTH_DEADLOCKS=y
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_BROKEN_S5C73M3_FIRMWARE=y
+# CONFIG_ARCHIKERNEL_TARGET_SYSTEM_HAS_NO_ZRAM_GOVERNOR=y
+
+#
+# Core features
+#
+# CONFIG_ARCHIKERNEL_CPU_OC is not set
+# CONFIG_ARCHIKERNEL_CPU_UV is not set
+# CONFIG_ARCHIKERNEL_GPU_CLOCK_CONTROL is not set
+# CONFIG_ARCHIKERNEL_USE_ARCH_POWER is not set
+# CONFIG_ARCHIKERNEL_CHARGE_LEVEL is not set
+# CONFIG_ARCHIKERNEL_EARLY_SUSPEND_DELAY is not set
+C# ONFIG_ARCHIKERNEL_HAPTIC_INTERFACE is not set
+# CONFIG_ARCHIKERNEL_PRINTK_INTERFACE is not set
+# CONFIG_ARCHIKERNEL_LOGCAT_INTERFACE is not set
+# CONFIG_ARCHIKERNEL_LEDS_INTERFACE is not set
+# CONFIG_ARCHIKERNEL_DYNAMIC_FSYNC is not set
+# CONFIG_ARCHIKERNEL_TOUCHBOOST_INTERFACE is not set
+# CONFIG_ARCHIKERNEL_TOUCH_WAKE is not set
+# CONFIG_ARCHIKERNEL_MDNIE_SHARPNESS is not set
+
+#
+# Optimizations
+#
+CONFIG_ARCHIKERNEL_OPTI_L1_LINE_SIZE=32
+CONFIG_ARCHIKERNEL_OPTI_L1_SIZE=32
+CONFIG_ARCHIKERNEL_OPTI_L2_SIZE=1024
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_LINKER_GOLD is not set
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_LINKER_BFD is not set
+CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_LINKER_DEFAULT=y
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_OPTI is not set
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_GC is not set
+# CONFIG_ARCHIKERNEL_OPTI_LDFLAGS_SORT is not set
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE=y
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_IDENTITY
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_BLOCK
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_INTERCHANGE
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_NEST
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_STRIP
+CONFIG_ARCHIKERNEL_OPTI_GRAPHITE_PARALLELIZE
+
+CONFIG_ARCHIKERNEL_OPTI_DNDEBUG=y
+CONFIG_ARCHIKERNEL_OPTI_FLTO=y
+CONFIG_ARCHIKERNEL_OPTI_FSECTION_ANCHORS=y
+CONFIG_ARCHIKERNEL_OPTI_FUNSAFE_LOOP_OPTIMIZATIONS=y
+CONFIG_ARCHIKERNEL_OPTI_FIVOPTS=y
+CONFIG_ARCHIKERNEL_OPTI_FTREE_LOOP_IM=y
+CONFIG_ARCHIKERNEL_OPTI_FTREE_LOOP_IVCANON=y
+CONFIG_ARCHIKERNEL_OPTI_FUNSWITCH_LOOPS=y
+CONFIG_ARCHIKERNEL_OPTI_FRENAME_REGISTERS=y
+CONFIG_ARCHIKERNEL_OPTI_FGCSE_SM=y
+CONFIG_ARCHIKERNEL_OPTI_FGCSE_LAS=y
+CONFIG_ARCHIKERNEL_OPTI_FWEB=y
+CONFIG_ARCHIKERNEL_OPTI_FTRACER=y
+CONFIG_ARCHIKERNEL_OPTI_FIPA_PTA=y
+CONFIG_ARCHIKERNEL_OPTI_FMODULO_SCHED=y
